feat: Add 3.12 to support (#67)
* open up to allowing 3.12

* add 3.12 in the checks

* bump to 2.16.2 cibuildwheel

* fix up ci now

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,14 +36,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.7", "3.10", "3.11"]
+        python-version: ["3.7", "3.12"]
         sys:
           - { os: ubuntu-latest, shell: bash }
           - { os: macos-latest, shell: bash }
         experimental: [false]
-        exclude:
-          - sys: { os: macos-latest, shell: bash }
-            python-version: 3.11
+        exclude: []
+        #  - sys: { os: macos-latest, shell: bash }
+        #    python-version: 3.12
 
         include:
           - python-version: pypy-3.7
