--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,10 +1,10 @@
 build_and_store_wheels: &BUILD_AND_STORE_WHEELS
   only_if: $CIRRUS_BRANCH == 'main' || $CIRRUS_TAG != '' || $CIRRUS_PR != ''
   install_cibuildwheel_script:
-    - python -m pip install cibuildwheel==2.16.2
+    - python -m pip install cibuildwheel==2.17.0
   run_cibuildwheel_script:
     - cibuildwheel
-  binary_artifacts:
+  wheels_artifacts:
     path: "wheelhouse/*"
 
 linux_x86_task:
@@ -50,11 +50,10 @@ linux_aarch64_task:
 macos_arm64_task:
   name: Build macOS arm64 wheels.
   macos_instance:
-    image: ghcr.io/cirruslabs/macos-monterey-xcode
+    image: ghcr.io/cirruslabs/macos-sonoma-xcode
 
   env:
-    PATH: /opt/homebrew/opt/python@3.10/bin:$PATH
+    PATH: /opt/homebrew/opt/python@3.10/libexec/bin:$PATH
   install_pre_requirements_script:
     - brew install python@3.10
-    - ln -s python3 /opt/homebrew/opt/python@3.10/bin/python
   <<: *BUILD_AND_STORE_WHEELS
