--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -5,6 +5,9 @@ on:
   release:
     types:
       - published
+  pull_request:
+    paths:
+      - .github/workflows/wheels.yml
 
 jobs:
   make_sdist:
@@ -35,6 +38,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - uses: yezz123/setup-uv@v4
 
       - uses: pypa/cibuildwheel@v2.19.0
 
